syntax = "proto3";

package com.teddy.srv.uaa;

option go_package = "proto";

import "github.com/golang/protobuf/ptypes/empty/empty.proto";
import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

service UAA {
	rpc GetAll(GetAllReq) returns (GetAllResp) {}
    rpc GetOne(GetOneReq) returns (Account) {}
    rpc RegisterByNormal(RegisterNormalReq) returns (Account) {}
    rpc RegisterByOAuth(RegisterOAuthReq) returns (Account) {}
    rpc VerifyPassword(VerifyAccountReq) returns (Account) {}
    rpc ChangePassword(ChangePasswordReq) returns (google.protobuf.Empty) {}
    rpc UpdateSignIn (UpdateSignInReq) returns (google.protobuf.Empty) {}

    rpc DeleteOne(UIDReq) returns (google.protobuf.Empty) {}
    rpc DoLockAccount(UIDReq) returns (google.protobuf.Empty) {}
    rpc DoCredentialsExpired(UIDReq) returns (google.protobuf.Empty) {}
}

message Account {
    string uid = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
    bytes password = 5;
    repeated string roles = 6;
    map<string, string> oauthUIDs = 7;
    bool locked = 9;
    bool credentialsExpired = 10;
    google.protobuf.Timestamp createDate = 11;
    google.protobuf.Timestamp updateDate = 12;
    string lastSignInIP = 13;
    google.protobuf.Timestamp lastSignInTime = 14;
}

message Sort {
    string name = 1;
    bool asc = 2;
}

message UIDReq {
    string uid = 1;
}

message GetAllReq {
    uint32 page = 1;
    uint32 size = 2;
    repeated Sort sorts = 3;
}

message GetOneReq {
    string principal = 1;
}

message GetAllResp {
    repeated Account accounts = 1;
}

message RegisterNormalReq {
    repeated string roles = 1;
    string username = 2;
    string password = 3;
    oneof contact {
        string email = 4;
        string phone = 5;
    }
}

message RegisterOAuthReq {
    repeated string roles = 1;
    string oauthProvider = 2;
    string oauthUID = 3;
}

message VerifyAccountReq {
    string principal = 1;
    string password = 2;
}

message ChangePasswordReq {
    string principal = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

message UpdateSignInReq {
    string ip = 1;
    google.protobuf.Timestamp time = 2;
}